--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch
 
 env:
-  PROJ_NAME=link-backend
-  REGION=eu-west-1
+  PROJ_NAME: link-backend
+  REGION: eu-west-1
 
 jobs:
   build-and-push:
