Workflow dispatch on push

--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -1,7 +1,14 @@
 name: Build and Push
 run-name: ${{ github.actor }} is building and pushing
 on:
-  workflow_dispatch
+  push:
+    branches:
+      - 'main'
+  workflow_dispatch:
+    inputs:
+      environments:
+        type: string
+        defualt: dev
 
 jobs:
   build-and-tag:
