--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ requests = "^2.31.0"
 pytest = "^7.3.2"
 moto = "^4.1.11"
 python-dotenv = "^1.0.0"
+pytest-asyncio = "^0.21.0"
 
 
 [build-system]
